F&GDEV/src/objects/Product_State_Status__c.object
<CustomObject>
    <description>Value set via trigger, to match the filing status on the related Policy Form State record, so that it can be used in a roll-up summary field on the Product State record.</description>
    <fields>
        <fullName>Filing_Status__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Policy Form State</label>
        <referenceTo>Filing_Status__c</referenceTo>
        <relationshipLabel>Product State Policy Form Associations</relationshipLabel>
        <relationshipName>Product_State_Statuses</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Policy_Form_Status__c</fullName>
        <label>Policy Form Status</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Print_Ready_URL__c</fullName>
        <formula>Filing_Status__r.Location__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Print Ready URL</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Product_State_Availability__c</fullName>
        <label>Product State</label>
        <referenceTo>State_Availability__c</referenceTo>
        <relationshipLabel>Product State Policy Form Associations</relationshipLabel>
        <relationshipName>Product_State_Statuses</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <label>Product State Policy Form Association</label>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>Product_State_Availability__c</columns>
        <columns>Filing_Status__c</columns>
        <columns>Policy_Form_Status__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <displayFormat>PSPF - {0000}</displayFormat>
        <label>Product State Policy Form Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Product State Policy Form Associations</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>